--- a/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
+++ b/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
@@ -4,3 +4,8 @@ closed.application.message.key=You are sure you want to close the application?
 closed.title.mensage.key=Closed Application
 yes.option.text=Ok
 cancel.option.text=Cancel
+username.column.text=Username
+name.column.text=Name
+lastname.column.text=Lastname
+status.column.text=Status
+message.index.bound=Column index out bound.
