Implementation user data interfaces

--- a/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
+++ b/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
@@ -9,3 +9,11 @@ name.column.text=Name
 lastname.column.text=Lastname
 status.column.text=Status
 message.index.bound=Column index out bound.
+username.field.text=Username
+name.field.text=Name
+lastname.field.text=Last Name
+email.field.text=Email
+status.field.text=Status
+btn.new.user.text=Insert
+btn.update.user.text=Update
+btn.remove.user.text=Delete
