Implementation insert user data in edit view

--- a/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
+++ b/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
@@ -17,3 +17,7 @@ status.field.text=Status
 btn.new.user.text=Insert
 btn.update.user.text=Update
 btn.remove.user.text=Delete
+different.argument.text=Different data type. Invalid argument.
+message.error.title=Application Error
+message.validate.title=Information
+invalid.field.text=Exists empty fields
