View update implementation

--- a/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
+++ b/cqrs/example1/example-root/example-view/src/main/resources/es/cqrs/language/language.properties
@@ -21,3 +21,4 @@ different.argument.text=Different data type. Invalid argument.
 message.error.title=Application Error
 message.validate.title=Information
 invalid.field.text=Exists empty fields
+btn.restore.text=Restore
